--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -14,7 +14,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  margin-bottom: $spacing-600;
+  margin-bottom: 8px;
 
   &:last-child:not(:first-child) {
     margin-bottom: 0;
@@ -53,7 +53,7 @@ h6 {
 ------------------------------ */
 p {
   margin-top: 0;
-  margin-bottom: $spacing-500;
+  margin-bottom: 8px;
   line-height: 160%;
   color: $text-primary;
   font-size: $size-font-body-default;
